syntax = "proto3";

package DnsServer;

service DnsService{
    rpc selfRegistration(details) returns(Empty);
    rpc selfUnregister(details) returns(Empty);
}

message details{
    int32 port = 1;
    string address = 2;
}

message Empty{}